tests/reject/genenum_bare_nullary.hi
# A nullary variant of a generic enum fixes no type parameter, so a bare `Empty`
# is ambiguous -- it must be written with an explicit type arg (`Empty$(int)`).
# Must be rejected (hierc: at the use site; both compilers reject the program).
enum Box($T):
    Has($T)
    Empty

fn main():
    x := Empty
    println("unreachable")
